--- a/devel/rubygem-msgpack/Makefile
+++ b/devel/rubygem-msgpack/Makefile
@@ -1,15 +1,16 @@
 PORTNAME=	msgpack
-PORTVERSION=	1.5.6
+PORTVERSION=	1.7.5
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Gems for MessagePack
+WWW=		https://msgpack.org/ \
+		https://github.com/msgpack/msgpack-ruby
 
 LICENSE=	apache2
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		gem
-USE_RUBY=	yes
 
 .include <bsd.port.mk>
