--- a/devel/rubygem-sigdump/Makefile
+++ b/devel/rubygem-sigdump/Makefile
@@ -1,17 +1,16 @@
 PORTNAME=	sigdump
-PORTVERSION=	0.2.4
+PORTVERSION=	0.2.5
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Setup signal handler which dumps backtrace of running threads
-WWW=		https://github.com/frsyuki/sigdump
+WWW=		https://github.com/fluent/sigdump
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 NO_ARCH=	yes
-USE_RUBY=	yes
 USES=		gem
 
 .include <bsd.port.mk>
