--- a/devel/rubygem-concurrent-ruby/Makefile
+++ b/devel/rubygem-concurrent-ruby/Makefile
@@ -1,16 +1,17 @@
 PORTNAME=	concurrent-ruby
-PORTVERSION=	1.1.10
+PORTVERSION=	1.3.4
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Modern concurrency tools for Ruby
+WWW=		https://ruby-concurrency.github.io/concurrent-ruby/ \
+		https://github.com/ruby-concurrency/concurrent-ruby
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 USES=		gem
-USE_RUBY=	yes
 
 NO_ARCH=	yes
 
