--- a/devel/rubygem-strptime/Makefile
+++ b/devel/rubygem-strptime/Makefile
@@ -1,5 +1,3 @@
-# Created by: Palle Girgensohn <girgen@FreeBSD.org>
-
 PORTNAME=	strptime
 PORTVERSION=	0.2.5
 CATEGORIES=	devel rubygems
@@ -7,11 +5,11 @@ MASTER_SITES=	RG
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Fast strptime engine
+WWW=		https://github.com/nurse/strptime
 
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-USE_RUBY=	yes
 USES=		gem
 
 .include <bsd.port.mk>
