--- a/devel/rubygem-tzinfo-data/Makefile
+++ b/devel/rubygem-tzinfo-data/Makefile
@@ -1,12 +1,12 @@
-# Created by: Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-
 PORTNAME=	tzinfo-data
-PORTVERSION=	1.2022.3
+PORTVERSION=	1.2024.2
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	IANA Time Zone database for TZInfo
+WWW=		https://tzinfo.github.io/ \
+		https://github.com/tzinfo/tzinfo-data
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -14,7 +14,6 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 RUN_DEPENDS=	rubygem-tzinfo>=1.0.0:devel/rubygem-tzinfo
 
 USES=		gem
-USE_RUBY=	yes
 
 NO_ARCH=	yes
 
