--- a/devel/rubygem-tzinfo/Makefile
+++ b/devel/rubygem-tzinfo/Makefile
@@ -1,12 +1,11 @@
-# Created by: Rui Lopes (rgl ruilopes com)
-
 PORTNAME=	tzinfo
-PORTVERSION=	2.0.5
+PORTVERSION=	2.0.6
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Daylight-savings aware timezone support for Ruby
+WWW=		https://tzinfo.github.io/
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -14,7 +13,6 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 RUN_DEPENDS=	rubygem-concurrent-ruby>=1.0:devel/rubygem-concurrent-ruby
 
 USES=		gem
-USE_RUBY=	yes
 
 NO_ARCH=	yes
 
