--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -338,6 +338,7 @@ SUBDIR += rasqal
 SUBDIR += redland
 SUBDIR += ripgrep
 SUBDIR += rubygem-asciidoctor
+SUBDIR += rubygem-psych
 SUBDIR += rubygem-rdiscount
 SUBDIR += rubygem-ronn
 SUBDIR += sassc
