add some rubygem ports

--- a/converters/Makefile
+++ b/converters/Makefile
@@ -53,6 +53,9 @@ SUBDIR += py-text-unidecode
 SUBDIR += py-unidecode
 SUBDIR += py-webencodings
 SUBDIR += recode
+SUBDIR += rubygem-base32
+SUBDIR += rubygem-base64
+SUBDIR += rubygem-iconv
 SUBDIR += trans
 SUBDIR += unix2dos
 SUBDIR += uudeview
