--- a/converters/rubygem-base32/Makefile
+++ b/converters/rubygem-base32/Makefile
@@ -7,6 +7,9 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Ruby extension for base32 encoding and decoding
 WWW=		https://github.com/stesla/base32
 
+LICENSE=        bsd2 ruby
+LICENSE_COMB=   dual
+
 NO_ARCH=	yes
 USES=		gem
 
