--- a/net/rubygem-serverengine/Makefile
+++ b/net/rubygem-serverengine/Makefile
@@ -1,17 +1,19 @@
 PORTNAME=	serverengine
-PORTVERSION=	2.3.2
+PORTVERSION=	2.4.0
 CATEGORIES=	net rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Framework to implement robust multiprocess servers
+WWW=		https://github.com/treasure-data/serverengine
 
 LICENSE=	apache2
 
-RUN_DEPENDS=	rubygem-sigdump>=0.2.2:devel/rubygem-sigdump
+RUN_DEPENDS=	rubygem-sigdump>=0.2.4:devel/rubygem-sigdump \
+		rubygem-base64>=0.1:converters/rubygem-base64 \
+		rubygem-logger>=1.4:devel/rubygem-logger
 
 NO_ARCH=	yes
-USE_RUBY=	yes
 USES=		gem
 
 .include <bsd.port.mk>
