add rubygem csv and drdb

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1366,6 +1366,8 @@ SUBDIR += ruby-gems
 SUBDIR += rubygem-builder
 SUBDIR += rubygem-concurrent-ruby
 SUBDIR += rubygem-cool.io
+SUBDIR += rubygem-csv
+SUBDIR += rubygem-drb
 SUBDIR += rubygem-i18n
 SUBDIR += rubygem-iobuffer
 SUBDIR += rubygem-logger
