--- a/devel/Makefile
+++ b/devel/Makefile
@@ -869,6 +869,8 @@ SUBDIR += ptlib
 SUBDIR += py-Automat
 SUBDIR += py-Jinja2
 SUBDIR += py-QtPy
+SUBDIR += py-aiobotocore
+SUBDIR += py-aioitertools
 SUBDIR += py-aiosignal
 SUBDIR += py-amalgamate
 SUBDIR += py-aniso8601
