add pear channel horde

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -820,6 +820,7 @@ SUBDIR += pcsc-lite
 SUBDIR += pear
 SUBDIR += pear-Text_Diff
 SUBDIR += pear-channel-geshi
+SUBDIR += pear-channel-horde
 SUBDIR += pear-geshi
 SUBDIR += pecl-APCu
 SUBDIR += performance
