add pear horde vfs

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -818,6 +818,16 @@ SUBDIR += pcre
 SUBDIR += pcre2
 SUBDIR += pcsc-lite
 SUBDIR += pear
+SUBDIR += pear-Horde_Date
+SUBDIR += pear-Horde_Exception
+SUBDIR += pear-Horde_Nls
+SUBDIR += pear-Horde_Role
+SUBDIR += pear-Horde_Support
+SUBDIR += pear-Horde_Token
+SUBDIR += pear-Horde_Translation
+SUBDIR += pear-Horde_Tree
+SUBDIR += pear-Horde_View
+SUBDIR += pear-Horde_Util
 SUBDIR += pear-Text_Diff
 SUBDIR += pear-channel-geshi
 SUBDIR += pear-channel-horde
