--- a/audio/libmad/Makefile
+++ b/audio/libmad/Makefile
@@ -1,12 +1,14 @@
 PORTNAME=	libmad
-PORTVERSION=	0.16.3
+PORTVERSION=	0.16.4
 CATEGORIES=	audio
+MASTER_SITES=	https://codeberg.org/tenacityteam/libmad/releases/download/${PORTVERSION}/
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Libmad library (part of MAD project)
-WWW=		https://www.underbit.com/products/mad/
+COMMENT=	MPEG audio decoder library
+WWW=		https://www.underbit.com/products/mad/ \
+		https://codeberg.org/tenacityteam/libmad
 
-LICENSE=	gpl2
+LICENSE=	gpl2+
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		cmake cpe pathfix
@@ -15,16 +17,14 @@ CMAKE_OFF=	MADD_ASM MADD16_ASM
 CMAKE_ON=	BUILD_SHARED_LIBS ${CMAKE_ON_${ARCH}}
 CMAKE_ON_armv6=	ASO
 CMAKE_ON_armv7=	ASO
-CMAKE_ON_i386= 	ASO
+CMAKE_ON_i386=	ASO
 
 USE_LDCONFIG=	yes
+WRKSRC=		${WRKDIR}/libmad
 
 PLIST_SUB=	PORTVERSION=${PORTVERSION}
 
 CPE_VENDOR=	underbit
-
-USE_GITHUB=	yes
-GH_ACCOUNT=	tenacityteam
 
 OPTIONS_SINGLE=	OPTIMIZE
 OPTIONS_SINGLE_OPTIMIZE=ACCURACY SPEED
