net/Makefile: typo

--- a/net/Makefile
+++ b/net/Makefile
@@ -144,7 +144,7 @@ SUBDIR += p5-URI
 SUBDIR += p5-XML-RPC
 SUBDIR += p5-XMLRPC-Lite
 SUBDIR += p5-perl-ldap
-SUBDIR += pear-Horde-Url
+SUBDIR += pear-Horde_Url
 SUBDIR += pear-Net_IPv4
 SUBDIR += pear-Net_IPv6
 SUBDIR += pear-Net_Socket
