--- a/x11-fonts/Makefile
+++ b/x11-fonts/Makefile
@@ -233,6 +233,7 @@
     SUBDIR += stix-fonts
     SUBDIR += sudo-font
     SUBDIR += suxus
+    SUBDIR += symbola
     SUBDIR += tamsyn
     SUBDIR += tamzen
     SUBDIR += terminus-font
