add pear-Horde_Text_Flowed, pear-horde_Http, pear-Horde_Template

--- a/www/Makefile
+++ b/www/Makefile
@@ -156,6 +156,8 @@ SUBDIR += p5-libapreq2
 SUBDIR += p5-libwww
 SUBDIR += palemoon
 SUBDIR += pear-HTTP_Request
+SUBDIR += pear-Horde_Http
+SUBDIR += pear-Horde_Template
 SUBDIR += php81-opcache
 SUBDIR += php81-session
 SUBDIR += php81-tidy
