--- a/devel/Makefile
+++ b/devel/Makefile
@@ -823,6 +823,7 @@ SUBDIR += pear-Horde_Date
 SUBDIR += pear-Horde_Exception
 SUBDIR += pear-Horde_Nls
 SUBDIR += pear-Horde_Role
+SUBDIR += pear-Horde_Stream_Filter
 SUBDIR += pear-Horde_Stream_Wrapper
 SUBDIR += pear-Horde_Support
 SUBDIR += pear-Horde_Token
@@ -1077,6 +1078,7 @@ SUBDIR += py-magic
 SUBDIR += py-marshmallow
 SUBDIR += py-maturin
 SUBDIR += py-mccabe
+SUBDIR += py-mergedeep
 SUBDIR += py-mock
 SUBDIR += py-molecule
 SUBDIR += py-monotonic
@@ -1130,6 +1132,7 @@ SUBDIR += py-pyproject-api
 SUBDIR += py-pyproject-metadata
 SUBDIR += py-pyrsistent
 SUBDIR += py-pyyaml
+SUBDIR += py-pyyaml_env_tag
 SUBDIR += py-python-dateutil
 SUBDIR += py-python-editor
 SUBDIR += py-python-magic
@@ -1305,6 +1308,7 @@ SUBDIR += py-versioneer
 SUBDIR += py-versioningit
 SUBDIR += py-virtualenv
 SUBDIR += py-wadllib
+SUBDIR += py-watchdog
 SUBDIR += py-wcwidth
 SUBDIR += py-websockets
 SUBDIR += py-wheel
