--- a/net/Makefile
+++ b/net/Makefile
@@ -144,9 +144,12 @@ SUBDIR += p5-URI
 SUBDIR += p5-XML-RPC
 SUBDIR += p5-XMLRPC-Lite
 SUBDIR += p5-perl-ldap
+SUBDIR += pear-Horde_Ldap
+SUBDIR += pear-Horde_Socket_Client
 SUBDIR += pear-Horde_Url
 SUBDIR += pear-Net_IPv4
 SUBDIR += pear-Net_IPv6
+SUBDIR += pear-Net_SMTP
 SUBDIR += pear-Net_Socket
 SUBDIR += pear-Net_URL
 SUBDIR += pear-Net_URL2
@@ -162,6 +165,7 @@ SUBDIR += php83-sockets
 SUBDIR += phpldapadmin
 SUBDIR += py-avahi
 SUBDIR += py-ec2-cli-tools
+SUBDIR += py-eventlet
 SUBDIR += py-h11
 SUBDIR += py-ifaddr
 SUBDIR += py-mpi4py
