--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -155,6 +155,7 @@ SUBDIR += p5-Sys-Hostname-Long
 SUBDIR += p5-Unix-Processors
 SUBDIR += patchelf
 SUBDIR += pcbsd-libsh
+SUBDIR += pear-File
 SUBDIR += php81-fileinfo
 SUBDIR += php81-posix
 SUBDIR += php82-fileinfo
