--- a/dns/Makefile
+++ b/dns/Makefile
@@ -34,6 +34,9 @@ SUBDIR += p5-Net-DNS-Resolver-Mock
 SUBDIR += p5-Net-DNS-Resolver-Programmable
 SUBDIR += p5-Net-LibIDN
 SUBDIR += pdnsd
+SUBDIR += pear-File_DNS
+SUBDIR += pear-Horde_Idna
+SUBDIR += pear-Net_DNS2
 SUBDIR += public_suffix_list
 SUBDIR += py-aiodns
 SUBDIR += py-dns-lexicon
