--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -258,6 +258,15 @@ SUBDIR += py-mdit-py-plugins
 SUBDIR += py-mdurl
 SUBDIR += py-mistune
 SUBDIR += py-mistune0
+SUBDIR += py-mkdocs
+SUBDIR += py-mkdocs-autorefs
+SUBDIR += py-mkdocs-get-deps
+SUBDIR += py-mkdocs-git-revision-date-localized-plugin
+SUBDIR += py-mkdocs-minify-plugin
+SUBDIR += py-mkdocs-nature
+SUBDIR += py-mkdocs-redirects
+SUBDIR += py-mkdocs-rss-plugin
+SUBDIR += py-mkdocs-simple-hooks
 SUBDIR += py-myst-parser
 SUBDIR += py-openstep-plist
 SUBDIR += py-parso
