--- a/comms/Makefile
+++ b/comms/Makefile
@@ -25,6 +25,8 @@ SUBDIR += p5-Device-Gsm
 SUBDIR += p5-Device-Modem
 SUBDIR += p5-Device-SerialPort
 SUBDIR += p5-SMS-Send
+SUBDIR += pear-Horde_ActiveSync
+SUBDIR += pear-Horde_SyncMl
 SUBDIR += pr
 SUBDIR += py-pyserial
 SUBDIR += qt5-connectivity
