--- a/mail/Makefile
+++ b/mail/Makefile
@@ -95,6 +95,11 @@ SUBDIR += p5-Net-SMTP-SSL
 SUBDIR += p5-Net-SMTPS
 SUBDIR += panda-cclient
 SUBDIR += pantomime
+SUBDIR += pear-Horde_Imap_Client
+SUBDIR += pear-Horde_Mail
+SUBDIR += pear-Horde_Mime
+SUBDIR += pear-Horde_Smtp
+SUBDIR += pear-MIME_Type
 SUBDIR += php81-imap
 SUBDIR += php82-imap
 SUBDIR += php83-imap
