--- a/security/Makefile
+++ b/security/Makefile
@@ -150,6 +150,13 @@ SUBDIR += pam_google_authenticator
 SUBDIR += pam_helper
 SUBDIR += pam_ldap
 SUBDIR += pam_yubico
+SUBDIR += pear-Auth
+SUBDIR += pear-Auth_HTTP
+SUBDIR += pear-Auth_SASL
+SUBDIR += pear-Horde_Auth
+SUBDIR += pear-Horde_Crypt_Blowfish
+SUBDIR += pear-Horde_Perms
+SUBDIR += pear-Horde_Secret
 SUBDIR += pecl-gnupg
 SUBDIR += pecl-mcrypt
 SUBDIR += php81-filter
