--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -48,6 +48,11 @@ SUBDIR += p5-IO-Zlib
 SUBDIR += p7zip
 SUBDIR += par2cmdline
 SUBDIR += pbzip2
+SUBDIR += pear-File_Archive
+SUBDIR += pear-Horde_Compress
+SUBDIR += pear-Horde_Compress_Fast
+SUBDIR += pear-Horde_Pack
+SUBDIR += pear-PHP_Archive
 SUBDIR += php81-bz2
 SUBDIR += php81-phar
 SUBDIR += php81-zip
