--- a/security/Makefile
+++ b/security/Makefile
@@ -155,8 +155,10 @@ SUBDIR += pear-Auth_HTTP
 SUBDIR += pear-Auth_SASL
 SUBDIR += pear-Horde_Auth
 SUBDIR += pear-Horde_Crypt_Blowfish
+SUBDIR += pear-Horde_Group
 SUBDIR += pear-Horde_Perms
 SUBDIR += pear-Horde_Secret
+SUBDIR += pear-Horde_Share
 SUBDIR += pecl-gnupg
 SUBDIR += pecl-mcrypt
 SUBDIR += php81-filter
