add textproc pear horde

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -192,7 +192,12 @@ SUBDIR += p5-YAML-LibYAML
 SUBDIR += p5-YAML-Tiny
 SUBDIR += p5-libxml
 SUBDIR += pdfoutline
+SUBDIR += pear-Horde_CssMinify
+SUBDIR += pear-Horde_JavascriptMinify
+SUBDIR += pear-Horde_Text_Filter
 SUBDIR += pear-Horde_Text_Flowed
+SUBDIR += pear-Horde_Xml_Element
+SUBDIR += pear-Horde_Xml_Wbxml
 SUBDIR += php81-ctype
 SUBDIR += php81-dom
 SUBDIR += php81-enchant
