--- a/devel/Makefile
+++ b/devel/Makefile
@@ -819,6 +819,7 @@ SUBDIR += pcre
 SUBDIR += pcre2
 SUBDIR += pcsc-lite
 SUBDIR += pear
+SUBDIR += pear-Horde_Core
 SUBDIR += pear-Horde_Date
 SUBDIR += pear-Horde_Exception
 SUBDIR += pear-Horde_Nls
