--- a/www/Makefile
+++ b/www/Makefile
@@ -157,7 +157,9 @@ SUBDIR += p5-libwww
 SUBDIR += palemoon
 SUBDIR += pear-HTTP_Request
 SUBDIR += pear-Horde_Dav
+SUBDIR += pear-Horde_Form
 SUBDIR += pear-Horde_Http
+SUBDIR += pear-Horde_SessionHandler
 SUBDIR += pear-Horde_Template
 SUBDIR += php81-opcache
 SUBDIR += php81-session
