css parser and editor

--- a/www/Makefile
+++ b/www/Makefile
@@ -156,7 +156,9 @@ SUBDIR += p5-libapreq2
 SUBDIR += p5-libwww
 SUBDIR += palemoon
 SUBDIR += pear-HTTP_Request
+SUBDIR += pear-Horde_Css_Parser
 SUBDIR += pear-Horde_Dav
+SUBDIR += pear-Horde_Editor
 SUBDIR += pear-Horde_Feed
 SUBDIR += pear-Horde_Form
 SUBDIR += pear-Horde_Http
