pear-Horde_Stream

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -826,6 +826,7 @@ SUBDIR += pear-Horde_Exception
 SUBDIR += pear-Horde_Nls
 SUBDIR += pear-Horde_Role
 SUBDIR += pear-Horde_Serialize
+SUBDIR += pear-Horde_Stream
 SUBDIR += pear-Horde_Stream_Filter
 SUBDIR += pear-Horde_Stream_Wrapper
 SUBDIR += pear-Horde_Support
