--- a/devel/Makefile
+++ b/devel/Makefile
@@ -819,10 +819,13 @@ SUBDIR += pcre
 SUBDIR += pcre2
 SUBDIR += pcsc-lite
 SUBDIR += pear
+SUBDIR += pear-Horde_Cache
 SUBDIR += pear-Horde_Core
+SUBDIR += pear-Horde_Data
 SUBDIR += pear-Horde_Date
 SUBDIR += pear-Horde_Date_Parser
 SUBDIR += pear-Horde_Exception
+SUBDIR += pear-Horde_Icalendar
 SUBDIR += pear-Horde_Nls
 SUBDIR += pear-Horde_Role
 SUBDIR += pear-Horde_Serialize
@@ -830,6 +833,7 @@ SUBDIR += pear-Horde_Stream
 SUBDIR += pear-Horde_Stream_Filter
 SUBDIR += pear-Horde_Stream_Wrapper
 SUBDIR += pear-Horde_Support
+SUBDIR += pear-Horde_Timezone
 SUBDIR += pear-Horde_Token
 SUBDIR += pear-Horde_Translation
 SUBDIR += pear-Horde_Tree
