--- a/devel/Makefile
+++ b/devel/Makefile
@@ -820,6 +820,7 @@ SUBDIR += pcre2
 SUBDIR += pcsc-lite
 SUBDIR += pear
 SUBDIR += pear-Horde_Cache
+SUBDIR += pear-Horde_Cli
 SUBDIR += pear-Horde_Core
 SUBDIR += pear-Horde_Data
 SUBDIR += pear-Horde_Date
