--- a/devel/Makefile
+++ b/devel/Makefile
@@ -830,6 +830,7 @@ SUBDIR += pear-Horde_Date
 SUBDIR += pear-Horde_Date_Parser
 SUBDIR += pear-Horde_Exception
 SUBDIR += pear-Horde_Icalendar
+SUBDIR += pear-Horde_Injector
 SUBDIR += pear-Horde_Nls
 SUBDIR += pear-Horde_Role
 SUBDIR += pear-Horde_Serialize
