--- a/dns/bind918/Makefile
+++ b/dns/bind918/Makefile
@@ -1,7 +1,7 @@
 # pkg-help formatted with fmt 59 63
 
 PORTNAME=	bind
-DISTVERSION=	9.18.30
+DISTVERSION=	9.18.32
 PORTREVISION=	0
 CATEGORIES=	dns net
 MASTER_SITES=	ISC/bind9/${DISTVERSION}
@@ -181,8 +181,7 @@ post-install:
 
 post-install-DOCS-on:
 	${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}/arm
-	${INSTALL_DATA} ${WRKSRC}/CHANGES* \
-		${WRKSRC}/README.md ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA}  ${WRKSRC}/README.md ${FAKE_DESTDIR}${DOCSDIR}
 	cd ${WRKSRC}/doc/arm/_build/html && ${COPYTREE_SHARE} . ${FAKE_DESTDIR}${DOCSDIR}/arm
 
 do-install:
