--- a/devel/automake/Makefile
+++ b/devel/automake/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	automake
-PORTVERSION=	1.16.5
+DISTVERSION=	1.17
 CATEGORIES=	devel
 MASTER_SITES=	GNU
 
@@ -10,16 +10,18 @@ WWW=		https://www.gnu.org/software/automake/
 LICENSE=	gpl2+ gfdl
 LICENSE_COMB=	multi
 
-BUILD_DEPENDS=	autoconf>=2.69:devel/autoconf
-RUN_DEPENDS=	autoconf>=2.69:devel/autoconf
+BUILD_DEPENDS=	autoconf>=2.72:devel/autoconf
+RUN_DEPENDS=	autoconf>=2.72:devel/autoconf
 
-BUILD_VERSION=	1.16
-PLIST_SUB=	BUILD_VERSION=${BUILD_VERSION}
-USES=		cpe makeinfo perl5 tar:xz
-GNU_CONFIGURE=	yes
-MAKE_ENV+=	MAKEINFOFLAGS=--no-split
-INFO=		automake automake-history
+USES=		cpe perl5 tar:xz
 CPE_VENDOR=	gnu
+
+GNU_CONFIGURE=	yes
+
+NO_ARCH=	yes
+
+INFO=		automake automake-history
+PLIST_SUB=	BUILD_VERSION=${DISTVERSION:C/(\.[^.]*).*/\1/}
 
 OPTIONS_DEFINE=	DOCS
 
