--- a/security/cryptopp/Makefile
+++ b/security/cryptopp/Makefile
@@ -1,12 +1,12 @@
 PORTNAME=	cryptopp
-PORTVERSION=	8.7.0
+PORTVERSION=	8.9.0
 CATEGORIES=	security
-MASTER_SITES=	http://www.cryptopp.com/
+MASTER_SITES=	https://github.com/weidai11/${PORTNAME}/releases/download/CRYPTOPP_${PORTVERSION:S/./_/g}/
 DISTNAME=	cryptopp${PORTVERSION:S/.//g}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Free C++ class library of Cryptographic Primitives
-WWW=		https://www.cryptopp.com/
+WWW=		https://github.com/weidai11/cryptopp
 
 LICENSE=	boost
 LICENSE_FILE=	${WRKSRC}/License.txt
@@ -19,7 +19,7 @@ CPE_VENDOR=	cryptopp
 EXTRACT_BEFORE_ARGS=	-aq
 NO_WRKSUBDIR=		yes
 
-CXXFLAGS+=	-Wno-deprecated-declarations -fPIC
+CXXFLAGS+=	-fPIC
 MAKEFILE=	GNUmakefile
 ALL_TARGET=	static shared libcryptopp.pc
 
@@ -30,7 +30,13 @@ PLIST_SUB+=	SOVERSION=${SOVERSION} \
 OPTIONS_DEFINE=		DEBUG DOCS FULL_DEBUG TOOLS
 OPTIONS_DEFINE_amd64=	SIMD
 OPTIONS_DEFINE_i386=	SIMD
+OPTIONS_DEFINE_powerpc=		SIMD
+OPTIONS_DEFINE_powerpc64=	SIMD
+OPTIONS_DEFINE_powerpc64le=	SIMD
 OPTIONS_DEFAULT=	TOOLS
+OPTIONS_DEFAULT_powerpc=	SIMD
+OPTIONS_DEFAULT_powerpc64=	SIMD
+OPTIONS_DEFAULT_powerpc64le=	SIMD
 OPTIONS_SUB=		yes
 
 # Always compile with -DNDEBUG for release. Otherwise, sensitive
@@ -49,24 +55,8 @@ TOOLS_TEST_TARGET_OFF=	test
 
 .include <bsd.mport.options.mk>
 
-.if ${PORT_OPTIONS:MSIMD}
-.  if ${ARCH} == i386 || ${ARCH} == amd64
-.    if !${MACHINE_CPU:Msse2}
-CXXFLAGS+=	-DCRYPTOPP_DISABLE_ASM -DCRYPTOPP_DISABLE_SSE2
-.    endif
-.    if !${MACHINE_CPU:Mssse3}
-CXXFLAGS+=	-DCRYPTOPP_DISABLE_SSSE3
-.    endif
-.    if !${MACHINE_CPU:Msse41}
-CXXFLAGS+=	-DCRYPTOPP_DISABLE_SSE4
-.    endif
-.  elif ${ARCH} == powerpc || ${ARCH:Mpowerpc64*}
-CXXFLAGS+=	-DCRYPTOPP_ALTIVEC_AVAILABLE
-.  endif
-.else
-CXXFLAGS+=	-DCRYPTOPP_DISABLE_ASM -DCRYPTOPP_DISABLE_SSE2 \
-		-DCRYPTOPP_DISABLE_SSSE3 -DCRYPTOPP_DISABLE_SSE4 \
-		-DCRYPTOPP_DISABLE_ALTIVEC
+.if !${PORT_OPTIONS:MSIMD}
+CXXFLAGS+=	-DCRYPTOPP_DISABLE_ASM
 .endif
 
 pre-configure-FULL_DEBUG-on:
