--- a/devel/p5-XS-Parse-Keyword/Makefile
+++ b/devel/p5-XS-Parse-Keyword/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	XS-Parse-Keyword
 PORTVERSION=	0.46
+PORTREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:PEVANS
@@ -22,6 +23,6 @@ USES=		perl5
 USE_PERL5=	modbuild
 
 post-install:
-	${STRIP_CMD} ${STAGEDIR}${PREFIX}/${SITE_ARCH_REL}/auto/XS/Parse/Keyword/Keyword.so
+	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/perl5/site_perl/auto/XS/Parse/Keyword/Keyword.so
 
 .include <bsd.port.mk>
