devel/ptlib: refactor

--- a/devel/ptlib/Makefile
+++ b/devel/ptlib/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	ptlib
 PORTVERSION=	2.10.11
-PORTREVISION=	6
+PORTREVISION=	7
 CATEGORIES=	devel
 MASTER_SITES=	GNOME
 
@@ -26,7 +26,8 @@ LDFLAGS+=	-L${OPENSSLLIB}
 NO_TEST=	yes
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS+=--enable-audio \
+CONFIGURE_ARGS+=--disable-bsdvideo \
+		--enable-audio \
 		--disable-lua \
 		--disable-sasl \
 		--enable-ipv6 \
@@ -39,11 +40,6 @@ CONFIGURE_ENV+=	OPENSSL_CFLAGS="-I${OPENSSLINC}" \
 		OPENSSL_LIBS="-L${OPENSSLLIB} -lssl" \
 		OSRELEASE=${OSRELEASE}
 
-OPTIONS_DEFINE=	BSDVIDEO DEBUG ODBC ALSA JABBER V4L SDL LDAP PULSEAUDIO
-OPTIONS_DEFAULT=BSDVIDEO SDL V4L JABBER
-OPTIONS_SUB=	yes
-
-BSDVIDEO_DESC=	BSD video support
 DEBUG_DESC=	Install debug library
 
 .include <bsd.mport.options.mk>
@@ -56,7 +52,7 @@ OSRELEASE=1103509
 CONFIGURE_TARGET=	${ARCH}-portbld-freebsd11.4
 .endif
 
-.if ${SSL_DEFAULT} == openssl
+.if (${SSL_DEFAULT} == base) || ${SSL_DEFAULT} == openssl
 EXTRA_PATCHES+= ${FILESDIR}/extra-patch-src_ptclib_pssl.cxx-openssl111
 .else
 EXTRA_PATCHES+= ${FILESDIR}/extra-patch-src_ptclib_pssl.cxx
@@ -66,16 +62,22 @@ PLIST_SUB+=	PORTVERSION=${PORTVERSION} \
 		PVERSION_MAJOR=${PVERSION_MAJOR} \
 		PVERSION_MINOR=${PVERSION_MINOR}
 
+OPTIONS_DEFINE=	DEBUG ODBC ALSA JABBER V4L SDL LDAP PULSEAUDIO
+OPTIONS_DEFAULT=SDL V4L JABBER
+OPTIONS_SUB=	yes
+
+
 PVERSION_MAJOR=	${PORTVERSION:C/.[0-9]+.[0-9]+.//}
 PVERSION_MINOR=	${PORTVERSION:C/.[0-9]+$//g}
 
-.if ${PORT_OPTIONS:MDEBUG}
-ALL_TARGET=	optshared debugshared
-PLIST_SUB+=	DEBUG=""
-.else
-ALL_TARGET=	optshared
-PLIST_SUB+=	DEBUG="@comment "
-.endif
+ALSA_LIB_DEPENDS=	libasound.so:audio/alsa-lib
+ALSA_CONFIGURE_ENABLE=alsa
+DEBUG_ALL_TARGET=	debugshared
+JABBER_CONFIGURE_ON=--enable-jabber
+JABBER_VARS=	PTLIB_VIDEO=1
+LDAP_USES=	ldap
+LDAP_USE=	OPENLDAP=yes
+LDAP_CONFIGURE_ENABLE=openldap
 
 ODBC_LIB_DEPENDS=	libodbc.so:databases/unixODBC
 ODBC_CONFIGURE_ENABLE=	odbc
@@ -89,29 +91,6 @@ V4L_LIB_DEPENDS=	libv4l2.so:multimedia/libv4l
 V4L_CONFIGURE_ENABLE=	v4l v4l2
 V4L_VARS=	PTLIB_VIDEO=1
 
-.if ${PORT_OPTIONS:MJABBER}
-CONFIGURE_ARGS+=--enable-jabber
-PLLIB_VIDEO=1
-.endif
-
-.if ${PORT_OPTIONS:MALSA}
-LIB_DEPENDS+=	libasound.so:audio/alsa-lib
-CONFIGURE_ARGS+=--enable-alsa
-PLIST_SUB+=	ALSA=""
-.else
-CONFIGURE_ARGS+=--disable-alsa
-PLIST_SUB+=	ALSA="@comment "
-.endif
-
-.if ${PORT_OPTIONS:MBSDVIDEO}
-CONFIGURE_ARGS+=--enable-bsdvideo
-PLIST_SUB+=	BSDVIDEO=""
-PTLIB_VIDEO=1
-.else
-CONFIGURE_ARGS+=--disable-bsdvideo
-PLIST_SUB+=	BSDVIDEO="@comment "
-.endif
-
 .if defined(PTLIB_VIDEO)
 CONFIGURE_ARGS+=--enable-video --enable-vidfile
 PLIST_SUB+=	VIDEODIR=""
@@ -120,40 +99,9 @@ CONFIGURE_ARGS+=--disable-video --disable-vidfile
 PLIST_SUB+=	VIDEODIR="@comment "
 .endif
 
-.if ${PORT_OPTIONS:MLDAP}
-USE_OPENLDAP=	yes
-CONFIGURE_ARGS+=--enable-openldap
-.else
-CONFIGURE_ARGS+=--disable-openldap
-.endif
-
-# ONLY FOR THE BRAVE!
-# If someone owns a firewire(4) video device and wants to use it for
-# video-conferencing purposes, please download the files:
-# libraw1394.shar.gz, libavc1394.shar.gz and libdc1394.shar.gz from
-# ftp://ftp.frm2.tum.de/pub/jpulz/FreeBSD/ports/
-# Extract the files in ${PORTSDIR}/devel and uncomment the following lines.
-#
-##enable libavc1394
-#.if defined(WITH_AVC1394)
-#LIB_DEPENDS+=	avc1394.2:devel/libavc1394 \
-#		dv.4:multimedia/libdv
-#CONFIGURE_ARGS+=	--enable-avc
-#PLIST_SUB+=	AVC1394=""
-#.else
 CONFIGURE_ARGS+=	--disable-avc
 PLIST_SUB+=	AVC1394="@comment "
-#.endif
-#
-##enable libdc1394
-#.if defined(WITH_DC1394)
-#LIB_DEPENDS+=	dc1394.2[0-9]:multimedia/libdc1394
-#CONFIGURE_ARGS+=	--enable-dc
-#PLIST_SUB+=	DC1394=""
-#.else
 CONFIGURE_ARGS+=	--disable-dc
-#PLIST_SUB+=	DC1394="@comment "
-#.endif
 
 .include <bsd.port.pre.mk>
 
