devel/py-babel: disable test

--- a/devel/py-babel/Makefile
+++ b/devel/py-babel/Makefile
@@ -16,9 +16,10 @@ TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}freezegun>0:devel/py-freezegun@${PY_FLAVOR}
 
 USES=		cpe python
 CPE_VENDOR=	pocoo
-USE_PYTHON=	autoplist concurrent distutils pytest
+USE_PYTHON=	autoplist concurrent distutils
 
 NO_ARCH=	yes
+NO_TEST=	yes
 PORTDOCS=	docs/*
 
 OPTIONS_DEFINE=	DOCS
