--- a/devel/py-pytrie/Makefile
+++ b/devel/py-pytrie/Makefile
@@ -1,7 +1,5 @@
-# Created by: Kubilay Kocak <koobs@FreeBSD.org>
-
 PORTNAME=	pytrie
-PORTVERSION=	0.3.1
+PORTVERSION=	0.4.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -9,9 +7,9 @@ DISTNAME=	PyTrie-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Pure Python implementation of the trie data structure
+WWW=		https://github.com/gsakkis/pytrie
 
 LICENSE=	bsd3
-#LICENSE_FILE=	${WRKSRC}/LICENSE # Not packaged (yet) in sdist
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}sortedcontainers>0:devel/py-sortedcontainers@${PY_FLAVOR}
 
@@ -19,8 +17,6 @@ USES=		python
 USE_PYTHON=	autoplist distutils
 
 NO_ARCH=	yes
-
-do-test:
-	@cd ${WRKSRC} && ${PYTHON_CMD} ${PYDISTUTILS_SETUP} test
+NO_TEST=	yes
 
 .include <bsd.port.mk>
