--- a/devel/py-ruamel.yaml.clib/Makefile
+++ b/devel/py-ruamel.yaml.clib/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	ruamel.yaml.clib
-PORTVERSION=	0.2.6
+PORTVERSION=	0.2.12
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -11,12 +11,13 @@ WWW=		https://sourceforge.net/projects/ruamel-yaml-clib/
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
+
 USES=		python
-USE_PYTHON=	autoplist concurrent distutils
+USE_PYTHON=	autoplist concurrent pep517
 
 post-install:
 	${FIND} ${FAKE_DESTDIR}${PYTHON_SITELIBDIR} -name '*.so' -exec ${STRIP_CMD} {} +
-	${RM} -r ${FAKE_DESTDIR}${PYTHON_SITELIBDIR}/ruamel
-	${REINPLACE_CMD} -e '/LICENSE/d; /__init__.py/d; /__init__.cpython/d;' ${_PYTHONPKGLIST}
 
 .include <bsd.port.mk>
