devel/tclap: test

--- a/devel/tclap/Makefile
+++ b/devel/tclap/Makefile
@@ -16,7 +16,7 @@ CPE_VENDOR=	${PORTNAME}_project
 SHEBANG_GLOB=	*.py
 
 CMAKE_TESTING_ON=	FREEBSD_TESTS # tests are broken: https://sourceforge.net/p/tclap/bugs/36/ (can't find directories)
-
+NO_TEST=yes
 NO_ARCH=	yes # builds tests unconditionally https://sourceforge.net/p/tclap/bugs/35/
 
 OPTIONS_DEFINE=	DOCS
