--- a/textproc/utf8proc/Makefile
+++ b/textproc/utf8proc/Makefile
@@ -1,31 +1,28 @@
 PORTNAME=	utf8proc
-PORTVERSION=	2.5.0
-DISTVERSIONPREFIX=	v
+DISTVERSION=	2.9.0
 CATEGORIES=	textproc devel
+MASTER_SITES=	https://github.com/JuliaStrings/${PORTNAME}/releases/download/v${DISTVERSION}/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	UTF-8 processing library
+WWW=		https://juliastrings.github.io/utf8proc/
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE.md
 
-USES=		gmake
-USE_GITHUB=	yes
-GH_ACCOUNT=	JuliaStrings
+USES=		cmake
 USE_LDCONFIG=	yes
-MAKE_ARGS=	prefix=${PREFIX}
+
+CMAKE_ON=	BUILD_SHARED_LIBS
+
 PLIST_FILES=	include/utf8proc.h \
-		lib/libutf8proc.a \
 		lib/libutf8proc.so \
-		lib/libutf8proc.so.2 \
-		lib/libutf8proc.so.2.3.2 \
+		lib/libutf8proc.so.3 \
+		lib/libutf8proc.so.3.0.0 \
 		libdata/pkgconfig/libutf8proc.pc
 PORTDOCS=	NEWS.md README.md
 
 OPTIONS_DEFINE=	DOCS
-
-post-install:
-	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/libutf8proc.so
 
 post-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
