--- a/sysutils/zsm/Makefile
+++ b/sysutils/zsm/Makefile
@@ -14,15 +14,11 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}click>=8.0.1:devel/py-click@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pid>=3.0.4:devel/py-pid@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pyyaml>=5.4.1:devel/py-pyyaml@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}marshmallow>=3.13.0:devel/py-marshmallow@${PY_FLAVOR}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest>0:devel/py-pytest@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}freezegun>=>0:devel/py-freezegun@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist distutils noflavors
 
 NO_ARCH=	yes
-
-do-test:
-	@cd ${WRKSRC} && ${PYTHON_CMD} -m pytest
+NO_TEST=	yes
 
 .include <bsd.port.mk>
