--- a/devel/pear-Horde_Alarm/Makefile
+++ b/devel/pear-Horde_Alarm/Makefile
@@ -6,6 +6,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	PEAR Horde alarm libraries
 WWW=		https://pear.horde.org
 
+LICENSE=	lgpl2.1
+
 USES=		horde cpe
 USE_HORDE_RUN=	Horde_Date Horde_Exception Horde_Translation
 
