--- a/devel/Makefile
+++ b/devel/Makefile
@@ -819,6 +819,7 @@ SUBDIR += pcre2
 SUBDIR += pcsc-lite
 SUBDIR += pear
 SUBDIR += pear-Horde_Alarm
+SUBDIR += pear-Horde_Argv
 SUBDIR += pear-Horde_Autoloader
 SUBDIR += pear-Horde_Cache
 SUBDIR += pear-Horde_Cli
