--- a/devel/pear-Horde_Autoloader/Makefile
+++ b/devel/pear-Horde_Autoloader/Makefile
@@ -6,6 +6,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Horde Autoloader
 WWW=		https://pear.horde.org
 
+LICENSE=	lgpl2.1
+
 USES=		horde cpe
 
 .include <bsd.port.mk>
