--- a/security/pear-Horde_Auth/Makefile
+++ b/security/pear-Horde_Auth/Makefile
@@ -6,6 +6,8 @@ MAINTAINER=	horde@FreeBSD.org
 COMMENT=	Horde Authentication API
 WWW=		https://pear.horde.org
 
+LICENSE=	bsd2
+
 USES=		horde php cpe
 USE_HORDE_RUN=	Horde_Exception Horde_Util
 
