--- a/devel/Makefile
+++ b/devel/Makefile
@@ -821,6 +821,7 @@ SUBDIR += pear
 SUBDIR += pear-Horde_Alarm
 SUBDIR += pear-Horde_Argv
 SUBDIR += pear-Horde_Autoloader
+SUBDIR += pear-Horde_Autoloader_Cache
 SUBDIR += pear-Horde_Cache
 SUBDIR += pear-Horde_Cli
 SUBDIR += pear-Horde_Constraint
