--- a/www/Makefile
+++ b/www/Makefile
@@ -163,6 +163,11 @@ SUBDIR += pear-Horde_Feed
 SUBDIR += pear-Horde_Form
 SUBDIR += pear-Horde_Http
 SUBDIR += pear-Horde_Routes
+SUBDIR += pear-Horde_Service_Facebook
+SUBDIR += pear-Horde_Service_Gravatar
+SUBDIR += pear-Horde_Service_Twiter
+SUBDIR += pear-Horde_Service_UrlShortener
+SUBDIR += pear-Horde_Service_Weather
 SUBDIR += pear-Horde_SessionHandler
 SUBDIR += pear-Horde_Template
 SUBDIR += php81-opcache
