--- a/devel/pear-Horde_Constraint/Makefile
+++ b/devel/pear-Horde_Constraint/Makefile
@@ -6,6 +6,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Horde Constraint library
 WWW=		https://pear.horde.org
 
+LICENSE=	bsd2
+
 USES=		horde cpe
 
 .include <bsd.port.mk>
