--- a/devel/pear-Horde_Cache/Makefile
+++ b/devel/pear-Horde_Cache/Makefile
@@ -6,6 +6,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Horde Caching API
 WWW=		https://pear.horde.org
 
+LICENSE=	lgpl2.1
+
 USES=		horde php cpe
 USE_HORDE_RUN=	Horde_Compress_Fast \
 		Horde_Exception \
