--- a/security/pear-Horde_Crypt_Blowfish/Makefile
+++ b/security/pear-Horde_Crypt_Blowfish/Makefile
@@ -7,6 +7,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Horde blowfish encryption for PHP string data
 WWW=		https://pear.horde.org
 
+LICENSE=	lgpl2.1
+
 USES=	horde cpe
 USE_HORDE_RUN=	Horde_Exception \
 		Horde_Support
